[gd_scene load_steps=5 format=3 uid="uid://dtm0ipog668bh"]

[ext_resource type="Texture2D" uid="uid://dt0m5djsaebb5" path="res://assets/9patch inv.png" id="1_15de4"]
[ext_resource type="Script" path="res://scripts/inventory.gd" id="1_i4ank"]
[ext_resource type="PackedScene" uid="uid://ldstcdtsjqc3" path="res://scenes/inventory_ui_slot.tscn" id="2_0icqb"]
[ext_resource type="FontFile" uid="uid://kg2w0sgacegs" path="res://assets/fonts/8bitoperator_jve.ttf" id="3_xoqks"]

[node name="Inventory" type="CanvasLayer"]
layer = 0
script = ExtResource("1_i4ank")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -743.0
offset_top = -466.0
offset_right = -619.0
offset_bottom = -400.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12, 12)
texture = ExtResource("1_15de4")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 241.0
offset_top = 98.0
offset_right = 1557.0
offset_bottom = 763.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="InventoryText" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(0.482462, 0.259338, 0.0292141, 1)
texture_filter = 2
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_xoqks")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "INVENTORY"
fit_content = true

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
columns = 6

[node name="slot1" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 1

[node name="slot2" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 2

[node name="slot3" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 3

[node name="slot4" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 4

[node name="slot5" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 5

[node name="slot6" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 6

[node name="slot7" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 7

[node name="slot8" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 8

[node name="slot9" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 9

[node name="slot10" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 10

[node name="slot11" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 11

[node name="slot12" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 12

[node name="slot13" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 13

[node name="slot14" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 14

[node name="slot15" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 15

[node name="slot16" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 16

[node name="slot17" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 17

[node name="slot18" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 18

[node name="slot19" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 19

[node name="slot20" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 20

[node name="slot21" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 21

[node name="slot22" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 22

[node name="slot23" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 23

[node name="slot24" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource("2_0icqb")]
layout_mode = 2
slot_index = 24

[node name="LevelText" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(0.482462, 0.259338, 0.0292141, 1)
texture_filter = 2
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_xoqks")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "Level:"
fit_content = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="FishName" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(600, 67)
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
fit_content = true

[node name="RarityText" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
clip_contents = false
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
fit_content = true

[node name="WeightText" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
clip_contents = false
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="FlavourText" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(570, 200)
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
